--- a/resources/all_pages/loginpage/style.css
+++ b/resources/all_pages/loginpage/style.css
@@ -1,10 +1,10 @@
+
+
 .forms{
-  background-image: url('https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/228611254/original/2d3a5b63d71ce48a313cb263db8a8f2fcaaabade/create-3d-gym-interior-design.png');
-width: 100%;
+ margin-right: 0px;
+width: 50%;
 }
-.name{
-  color: blue;
-}
+
 .password{
   color: blue;
 }
@@ -33,8 +33,6 @@ h3{
   align-self: center;
   height: auto;
   display: grid;
-  box-sizing: border-box;
-  border: 20px solid blue;
- padding: 25mm;
+ 
  
 }
